# qfc-server-wallet

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_report.md
.github/workflows/: audit.yml  ci.yml  deny.yml  vet.yml
clients/: README.md
clients/approver-rs/: Cargo.toml  README.md
clients/approver-rs/src/: audit.rs  lib.rs  main.rs  processor.rs  prompt.rs  signer_loader.rs  webhook_handler.rs  wire.rs
clients/approver-rs/tests/: end_to_end.rs  preimage_compat.rs
clients/approver-ts/: README.md  package-lock.json  package.json  tsconfig.json
clients/approver-ts/src/: audit.ts  index.ts  preimage.ts  processor.ts  prompt.ts  signer.ts  ulid.ts  webhook.ts  wire.ts
clients/approver-ts/test/: preimage.test.ts  processor.test.ts  signer.test.ts  webhook.test.ts
clients/approver-ts/test/fixtures/: preimage_golden.json
clients/wallet-grpc-rs/: Cargo.toml  README.md  build.rs
clients/wallet-grpc-rs/examples/: create_wallet.rs  list_audit_events.rs  sign_message.rs  submit_approval.rs
clients/wallet-grpc-rs/proto/: approver.proto  wallet.proto
clients/wallet-grpc-rs/src/: auth.rs  client.rs  convert.rs  error.rs  lib.rs
clients/wallet-grpc-rs/tests/: e2e.rs
crates/qfc-audit/: Cargo.toml
crates/qfc-audit/migrations/: 0001_init.sql
crates/qfc-audit/src/: anchor.rs  chain_anchor.rs  event.rs  file.rs  lib.rs  postgres.rs  sink.rs
crates/qfc-audit/tests/: chain_anchor_integration.rs  postgres_integration.rs
crates/qfc-enclave/: Cargo.toml
crates/qfc-enclave/src/: attestation.rs  cose.rs  derivation.rs  enclave.rs  error.rs  hybrid_verifier.rs  lib.rs  signer.rs  verify_attestation.rs
crates/qfc-enclave/src/enclaves/: mock.rs  mod.rs  nitro.rs
crates/qfc-enclave/src/signers/: ed25519.rs  ml_dsa.rs  mod.rs  secp256k1.rs
crates/qfc-policy/: Cargo.toml
crates/qfc-policy/src/: decision.rs  lib.rs  policy.rs  policy_service_signer.rs  rate_limit.rs  request.rs  rule_set_policy.rs  rules.rs  signed_decision.rs  static_policy.rs  vm.rs
crates/qfc-policy/src/decoders/: evm.rs  mod.rs  qvm.rs
crates/qfc-policy/tests/: evm_golden.rs
crates/qfc-quorum/: Cargo.toml
crates/qfc-quorum/migrations/: 0002_approvers.sql
crates/qfc-quorum/src/: approval.rs  approver.rs  identity.rs  lib.rs  mock.rs
crates/qfc-quorum/src/approvers/: hardware.rs  mod.rs  onchain.rs  orchestrating.rs  webhook.rs
crates/qfc-quorum/src/registry/: memory.rs  mod.rs  postgres.rs  tests.rs  types.rs
crates/qfc-quorum/src/store/: memory.rs  mod.rs  postgres.rs
crates/qfc-quorum/tests/: postgres_integration.rs
crates/qfc-server-wallet/: Cargo.toml  build.rs
crates/qfc-server-wallet/proto/: common.proto
crates/qfc-server-wallet/src/: lib.rs  main.rs  observability.rs  service.rs  wallet.rs
crates/qfc-server-wallet/src/api/: auth.rs  error.rs  handlers.rs  mod.rs  schemas.rs
crates/qfc-server-wallet/src/grpc/: approver.rs  auth.rs  convert.rs  mod.rs  wallet.rs
crates/qfc-server-wallet/tests/: api.rs  api_quorum.rs  e2e.rs  grpc_integration.rs  m3_hybrid_verifier_integration.rs  m5_multi_curve_quorum.rs  policy_service_signer_e2e.rs  quorum_e2e.rs
crates/qfc-sss/: Cargo.toml
crates/qfc-sss/src/: error.rs  lib.rs  shamir.rs  store.rs
crates/qfc-sss/src/stores/: local_fs.rs  mock.rs  mod.rs  s3_kms.rs
crates/qfc-wallet-types/: Cargo.toml
crates/qfc-wallet-types/src/: errors.rs  hd_path.rs  ids.rs  lib.rs  scheme.rs  secret.rs
deploy/: mimir-config.yaml  otel-collector-config.yaml
deploy/grafana/dashboards/: qfc-server-wallet.json
deploy/grafana/provisioning/dashboards/: dashboard.yml
deploy/grafana/provisioning/datasources/: datasource.yml
deploy/postgres-init/: 01-create.sql
dev/bruno/qfc-server-wallet/: 01 - Health.bru  02 - Create wallet (ed25519).bru  03 - Get wallet.bru  04 - Sign (raw payload).bru  05 - Audit events.bru  06 - OpenAPI.bru  07 - Metrics.bru  bruno.json
dev/bruno/qfc-server-wallet/environments/: local.bru
docs/: anchor-onchain-decisions.md  attestation.md  clients-decisions.md  grpc-api.md  grpc-client-sdk.md  grpc-decisions.md  m1-decisions.md  m3-decisions.md  m4-decisions.md  m5-decisions.md  policy-dsl.md  retro-m1-m2.md  retro-m3-m4.md  retro-v1.3.md  server-wallet-rfc.md  threat-model.md
docs/design/: cross-tee-quorum.md
docs/runbooks/: 00-deploy.md  01-eif-upgrade.md  02-key-rotation.md  03-incident-response.md  04-disaster-recovery.md  05-operator-onboarding.md  README.md
enclave/: Cargo.toml  Dockerfile.eif  Makefile  rust-toolchain.toml
enclave/src/: main.rs
examples/policies/: README.md  treasury.json
supply-chain/: config.toml
tests/: dev_stack_smoke.sh
tools/: sync-protos.sh
tools/gen-golden-vectors/: Cargo.toml
tools/gen-golden-vectors/src/: main.rs
