[workspace]
resolver = "2"
members = [
    "crates/qfc-server-wallet",
    "crates/qfc-enclave",
    "crates/qfc-sss",
    "crates/qfc-policy",
    "crates/qfc-quorum",
    "crates/qfc-audit",
    "crates/qfc-wallet-types",
]
# The `enclave/` directory holds the in-EIF boot binary. It's a SEPARATE
# Cargo target — its dependency graph is intentionally smaller and it
# builds in the Nitro EIF container, not the host workspace. Excluding it
# keeps the workspace-level `cargo test` fast and keeps the enclave's
# Cargo.lock independent from the host's.
exclude = ["enclave"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["QFC Network <maintainers@qfc.network>"]
license = "Apache-2.0"
repository = "https://github.com/qfc-network/qfc-server-wallet"
homepage = "https://qfc.network"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# IDs / time
ulid = { version = "1.1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Big-integer types (EVM U256, value-cap evaluation)
primitive-types = { version = "0.12", default-features = false, features = ["serde"] }

# Crypto — secret material handling
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"
rand = "0.8"
rand_core = "0.6"

# Curves
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core", "zeroize"] }
k256 = { version = "0.13", features = ["ecdsa", "serde", "sha256"] }

# Post-quantum signatures — M5 (FIPS 204 ML-DSA, pure Rust, RustCrypto family).
# See docs/m5-decisions.md D38 for why this crate (vs `pqcrypto-mldsa` C ref impl).
ml-dsa = { version = "0.1", features = ["alloc", "rand_core", "zeroize"], default-features = false }
# `signature` crate is re-exported by `ml-dsa` but pinning it explicitly so
# the Signer / Verifier / Keypair traits can be imported across crates.
signature = { version = "3.0", default-features = false, features = ["alloc"] }

# Borsh — used by qfc-policy QVM decoder to parse qfc-core's TransactionType
# envelope (RFC §9.6 option (b); see docs/m5-decisions.md D41).
borsh = { version = "1.5", features = ["derive"] }

# Hashing
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"

# Symmetric AEAD (LocalFsShareStore at-rest encryption)
chacha20poly1305 = { version = "0.10", features = ["std"] }

# HD wallets
bip32 = { version = "0.5", features = ["secp256k1", "mnemonic"] }
bip39 = "2.0"

# SSS
vsss-rs = "4.3"

# Encoding
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"

# COSE_Sign1 / CBOR — Nitro AttestationDoc parsing.
# See docs/m3-decisions.md D24 (why coset over aws-nitro-enclaves-cose).
# `ciborium` is the pure-Rust CBOR codec coset is built on; we re-use it
# directly to encode/decode the inner attestation payload Map<u8 -> Value>.
coset = "0.4"
ciborium = "0.2"

# EVM / RLP
alloy-rlp = "0.3"

# Tracing & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

# Postgres (used by qfc-audit M2)
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono"] }

# HTTP / API surface + middleware (M2 P1, also used by P5 observability)
axum = { version = "0.7", features = ["json", "macros"] }
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Webhook client (qfc-quorum M4)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Testing
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3.10"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true
