# Standalone crate — intentionally NOT a member of the main
# qfc-server-wallet workspace. Production integrators fork this
# directory as a starting point and shouldn't inherit the whole wallet
# dependency tree. The empty `[workspace]` table makes cargo treat this
# Cargo.toml as a workspace root in its own right.
[workspace]

[package]
name = "qfc-approver"
version = "0.1.0"
edition = "2021"
authors = ["QFC Network <maintainers@qfc.network>"]
license = "Apache-2.0"
description = "Reference approver-side client for the QFC server wallet (M4)."
repository = "https://github.com/qfc-network/qfc-server-wallet"
publish = false

[[bin]]
name = "qfc-approver"
path = "src/main.rs"

[lib]
name = "qfc_approver"
path = "src/lib.rs"

[dependencies]
# Bring in the server-side wire types so we can serde-mirror them and
# compute the canonical preimage byte-for-byte the same way the server
# does. Path-only deps keep the client buildable from a checkout.
qfc-quorum = { path = "../../crates/qfc-quorum" }
qfc-wallet-types = { path = "../../crates/qfc-wallet-types" }
qfc-enclave = { path = "../../crates/qfc-enclave" }

# HTTP server (webhook receiver)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"

# HTTP client (POST approvals back to the server)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HMAC + hashing for X-QFC-Signature verification
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bodies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# Time
time = { version = "0.3", features = ["formatting"] }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Filesystem (audit log + key file)
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1.40", features = ["full", "test-util"] }
ulid = "1.1"
