[package]
name = "qfc-audit"
description = "Hash-chained audit log abstraction for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.1.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time.workspace = true
hex.workspace = true

# Hash-chain digest + server signature
sha2.workspace = true
ed25519-dalek.workspace = true
zeroize.workspace = true
rand.workspace = true

# Async file IO + per-sink lock + spawn for the anchor job
tokio = { workspace = true, features = ["sync", "fs", "io-util", "rt", "macros", "time"] }

# Postgres backend (M2 P2)
sqlx = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers.workspace = true
testcontainers-modules.workspace = true
futures.workspace = true
