[package]
name = "qfc-enclave"
description = "TEE abstraction for QFC server wallet: Enclave trait, signers, HD derivation, MockEnclave (M1), NitroEnclave (M3)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }
qfc-sss = { path = "../qfc-sss", version = "0.0.0" }
qfc-policy = { path = "../qfc-policy", version = "0.0.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
zeroize.workspace = true
subtle.workspace = true
tracing.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }

# Curves
ed25519-dalek.workspace = true
k256.workspace = true

# Post-quantum signatures (M5).
ml-dsa.workspace = true
signature.workspace = true

# Hashing
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
hmac.workspace = true

# HD derivation
bip32.workspace = true
bip39.workspace = true

# Misc
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
primitive-types.workspace = true

# EVM tx decoding for hybrid verifier ceiling check (re-decodes inside the
# enclave so the verifier does not trust the host's pre-decoded `value`).
alloy-rlp.workspace = true

# COSE_Sign1 / CBOR parsing for real Nitro attestation envelopes.
# See docs/m3-decisions.md D24 + D46.
coset.workspace = true
ciborium.workspace = true

# ECDSA P-384 (ES384) verifier for real AWS Nitro attestations + X.509
# leaf-cert SPKI parsing. See docs/m3-decisions.md D47 + D48.
p384.workspace = true
x509-cert.workspace = true

[features]
# Real Nitro Enclaves backend (requires Linux + AWS Nitro-enabled host).
# Off by default so non-Linux dev still compiles. See enclaves/nitro.rs.
nitro = ["dep:tokio-vsock", "dep:tokio-util", "dep:futures", "dep:tokio-stream"]

[dependencies.tokio-vsock]
version = "0.5"
optional = true

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
optional = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true

[dev-dependencies]
proptest.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
