[package]
name = "qfc-policy"
description = "Declarative policy DSL + evaluator + multi-VM decoders for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
time.workspace = true
primitive-types.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest.workspace = true
