[package]
name = "qfc-policy"
description = "Declarative policy DSL + evaluator + multi-VM decoders for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
time.workspace = true
primitive-types.workspace = true
hex.workspace = true

# EVM decoder (M2 P4)
alloy-rlp.workspace = true

# M3 follow-up — policy-service identity key (LocalPolicyServiceSigner).
# The signer side of the hybrid scheme produces SignedPolicyDecision; the
# enclave verifies via the existing qfc-enclave::hybrid_verifier path.
ed25519-dalek.workspace = true
rand_core.workspace = true

# QVM minimal decoder (M5) — borsh envelope per RFC §9.6 option (b).
borsh.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest.workspace = true
rand = { workspace = true }
