[package]
name = "qfc-quorum"
description = "M-of-N approver coordination for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }
qfc-enclave = { path = "../qfc-enclave", version = "0.0.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
time.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true

# Approval-collection state + per-request notifications + webhook HTTP client
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
reqwest = { workspace = true }

# Postgres backend (M4)
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
wiremock = { workspace = true }
futures.workspace = true
