[package]
name = "qfc-server-wallet"
description = "QFC server wallet — TEE custody, SSS, M-of-N quorum. Top-level lib + binary."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "qfc_server_wallet"
path = "src/lib.rs"

[[bin]]
name = "qfc-server-wallet"
path = "src/main.rs"

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }
qfc-enclave = { path = "../qfc-enclave", version = "0.0.0" }
qfc-sss = { path = "../qfc-sss", version = "0.0.0" }
qfc-policy = { path = "../qfc-policy", version = "0.0.0" }
qfc-quorum = { path = "../qfc-quorum", version = "0.0.0" }
qfc-audit = { path = "../qfc-audit", version = "0.0.0" }

tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek.workspace = true
time.workspace = true
