[package]
name = "qfc-server-wallet"
description = "QFC server wallet — TEE custody, SSS, M-of-N quorum. Top-level lib + binary."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "qfc_server_wallet"
path = "src/lib.rs"

[[bin]]
name = "qfc-server-wallet"
path = "src/main.rs"

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.1.0" }
qfc-enclave = { path = "../qfc-enclave", version = "0.1.0" }
qfc-sss = { path = "../qfc-sss", version = "0.1.0" }
qfc-policy = { path = "../qfc-policy", version = "0.1.0" }
qfc-quorum = { path = "../qfc-quorum", version = "0.1.0" }
qfc-audit = { path = "../qfc-audit", version = "0.1.0" }

tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "signal"] }
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
http.workspace = true
time.workspace = true
sha2.workspace = true

# HTTP / API surface (M2 P1)
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
subtle.workspace = true
hex.workspace = true

# gRPC surface (RFC decision #7).
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true, optional = true }

[features]
default = ["reflection"]
# Enable tonic-reflection so `grpcurl` / `evans` can list services without
# compiled stubs. Off in prod via `--no-default-features`.
reflection = ["dep:tonic-reflection"]

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek.workspace = true
time.workspace = true
hyper.workspace = true
http-body-util.workspace = true
tower.workspace = true
# Used by the M3 follow-up policy-service signer E2E tests (encoding EVM
# transactions to exercise the value-cap hard ceiling).
alloy-rlp.workspace = true
async-trait.workspace = true
# For the gRPC integration tests we need a client and a transport.
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }
tokio-stream = { workspace = true }
