[package]
name = "qfc-sss"
description = "Shamir Secret Sharing wrapper + ShareStore trait for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
zeroize.workspace = true
tracing.workspace = true
