[package]
name = "qfc-sss"
description = "Shamir Secret Sharing wrapper + ShareStore trait for QFC server wallet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
qfc-wallet-types = { path = "../qfc-wallet-types", version = "0.0.0" }

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
zeroize.workspace = true
tracing.workspace = true
ulid.workspace = true

# SSS
vsss-rs.workspace = true
k256.workspace = true

# RNG (CSPRNG for share polynomial coefficients + AEAD nonces)
rand.workspace = true
rand_core.workspace = true

# Async file IO + sync primitives for the stores
tokio = { workspace = true, features = ["sync", "fs", "io-util", "rt"] }

# Timestamps on stored shares
time.workspace = true

# At-rest encryption for LocalFsShareStore
chacha20poly1305.workspace = true

[dev-dependencies]
proptest.workspace = true
hex.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
